# calendarer

./: docker-compose.yaml  pyproject.toml
app/: main.py
dbschema/: default.esdl
