[tool.poetry]
name = "calendarer"
version = "0.1.0"
description = ""
authors = ["Sergey Kurashov <shimielder@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.9.1"
uvicorn = "^0.30.1"
edgedb = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-randomly = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
